<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="launcher_name">Sapphire Launcher</string>
    <string name="launcher_version" translatable="false">Version: 12.2.50</string>
    <string name="launcher_copyright">Copyright \u00A9 2014–2017</string>
    <string name="old_launcher_provider_uri" translatable="false">content://com.android.launcher2.settings/favorites?notify=true</string>
    <string name="receive_launch_broadcasts_permission" translatable="false">com.NxIndustries.Sapphire.permission.RECEIVE_LAUNCH_BROADCASTS</string>
    <string name="receive_first_load_broadcast_permission" translatable="false">com.NxIndustries.Sapphire.permission.RECEIVE_FIRST_LOAD_BROADCAST</string>
    <string name="application_name">Sapphire Launcher</string>
    <string name="folder_name"></string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="toggle_weight_watcher">Show Mem</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows the app to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="gadget_setup_text">Setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="first_run_cling_title">Welcome to Sapphire UI</string>
    <string name="migration_cling_title">Copy your app icons</string>
    <string name="migration_cling_description">Import icons and folders from your old Home screens?</string>
    <string name="migration_cling_copy_apps">COPY ICONS</string>
    <string name="migration_cling_use_default">START FRESH</string>
    <string name="folder_opened">Folder opened, <xliff:g id="width" example="5">%1$d</xliff:g> by <xliff:g id="height" example="3">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="debug_memory_activity">* HPROF</string>
    <string name="settings_button_text">Settings</string>
    <string name="package_state_unknown">Unknown</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_search">Search</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed.
        You can remove it, or search for the app and install it manually.
    </string>
    <string name="wallpaper_load_fail">Couldn\'t load image as wallpaper</string>
    <string name="place_holder"></string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Whats on your mind? %s</string>
    <string name="loading">Loading…</string>
    <string name="signed_out">Signed out</string>
    <string name="default_string">Default</string>
    <string name="icon_size_title">Icon size</string>
    <string name="grid_size_title">Grid size</string>
    <string name="grid_size_summary">Choose the number of rows/columns</string>
    <string name="grid_size_rows_title">Rows</string>
    <string name="grid_size_columns_title">Columns</string>
    <string name="notification_badges_title">Notification badges</string>
    <string name="notification_badges_summary">Display notification counts on app icon</string>
    <string name="lock_workspace_title">Lock homescreen</string>
    <string name="lock_workspace_summary">Lock shortcuts and folders positions in the homescreen, dock and apps and widgets drawer.</string>
    <string name="show_shadow_title">Show shadow</string>
    <string name="show_shadow_summary">Most noticeable on light wallpapers</string>
    <string name="hide_icon_labels_title">Hide icon labels</string>
    <string name="hide_icon_labels_homescreen_summary">Hide icon labels on homescreen</string>
    <string name="hide_icon_labels_dock_summary">Hide icon labels in dock</string>
    <string name="dock_icons_title">Dock icons</string>
    <string name="dock_icons_summary">Number of icons in the dock</string>
    <string name="home_button_title">Home button</string>
    <string name="home_button_default_title">Only on default home screen</string>
    <string name="home_button_default_summary">Press Home button once for default screen, then again for action</string>
    <string name="back_button_title">Back button</string>
    <string name="menu_button_title">Menu button</string>
    <string name="show_dock">Enable Dock</string>
    <string name="welcome">Hi There!</string>
    <string name="setup">Lets get you setup!</string>
    <string name="longpress">Longpress on your desktop to bring up the launcher menu actions.</string>
    <string name="ehs">Use the launcher settings to create a unique desktop experience to help you get through your day. Create shortcusts, gestures, add an extended homescreen for quick app access and add an icon pack for personalization!</string>
    <string name="express">Express your feelings and personality with the tools provided to create a simple or complex homescreen.</string>
    <string name="oem">Don\'t let your oem be in control of your homescreen. Let\'s be together but not the same!</string>
    <string name="cont">Go!</string>
    <string name="home_dock">Homescreen Dock</string>
    <string name="dock_bkgn">Dock Background</string>
    <string name="ehs_pref">Extended Home Drawer</string>
    <string name="enable_ehs">Enable Service</string>
    <string name="page_set">Page Settings</string>
    <string name="iss">Icon Scaleing</string>
    <string name="iss_info">Increasing this number will fix the grainy look on Phablets and Tablets</string>
    <string name="ehs_drawer">EHS Drawer Background</string>
    <string name="ab_background">Actionbar Background</string>
    <string name="app_text">Main Text Color</string>
    <string name="search_active">Active Search Primary</string>
    <string name="ua_search">Unactive Search Secondary</string>
    <string name="scheme">Color Scheme</string>
    <string name="unlock_info">Allows you to change the color of your Statusbar and Navbar in your workspace</string>
    <string name="unlock_title">Unlock SystemUI</string>
    <string name="home_apply">Press Home to apply changes</string>
    <string name="statusbar">Statusbar</string>
    <string name="nav">Navigation Bar</string>
    <string name="dark_info">Inverts the statusbar color but only available in android 6.0+</string>
    <string name="dark_status">Dark Statusbar</string>
    <string name="basic">Google Preferences</string>
    <string name="goo_info">Just here for settings registry reasons…For further information and preferences, check your google settings.</string>
    <string name="goo_hot">Google Hotword</string>
    <string name="goo_set_info">The Playstore automatically is set to create shortcuts of newly installed applications on your desktop. Didn\'t know that did you.</string>
    <string name="goo_set">Google Settings</string>
    <string name="basic_util">Utilities</string>
    <string name="task_info">Toggle to show All Apps or System Apps in Shortcut Maker</string>
    <string name="task_title">Activities Filter</string>
    <string name="navbar">Navbar</string>
    <string name="navbar_note">Notice: Custom home key binding may not work on firmware that is heavily skinned or modified. It is in good practice to not mod the Home key. In general be cautious.</string>
    <string name="unlock_nav">Unlock Navigation Bar</string>
    <string name="unlock_nav_info">Allows you to set commands to the Navbar Buttons</string>
    <string name="page_ind">Page Indicators</string>
    <string name="show_chevronbar">ChevronBar</string>
    <string name="chevronbar_summary">Adds an Android N like clickable bar above the app dock. An all apps button replacement.</string>
    <string name="what_is_sapphire">What is Sapphire Launcher?</string>
    <string name="what_body_text">Sapphire Launcher was created several years ago as a homework experiment for college and for a rom that never came to be. Since than, the launcher has grown much more than what it was ever meant to be along with the communities that support it and the contributing developer!</string>
    <string name="what_two_body_text">This launcher was built off of the source code of Googles Launcher3 from Android 5.0 of which allowed many unlocked potential features like personalization, themeing, color schemes, gestures, and more! If ever encounter an issue or anything fishy, please contact the developer or post on the social groups! We are here to help! We also take suggestions and feedback!</string>
    <string name="what_three_body_text">GocalSD has put alot of time and effort into development of Sapphire Launcher and as a user you will notice messages to consider purchasing a license key. These keys will not benifit you to anything in the launcher but all revenue is put towards equipment, updates and more! All revenue goes back to the community in some way. One of these ways has already been announced as Sapphire Launchers sequal is already in development and scheduled for a release sometime in 2017!</string>
    <string name="permission">Permissions</string>
    <string name="what_permissions">We need to enable some permissions here to allow some features of Sapphire Launcher to work correctly. If you decline them, Gestures and Performance may be affected and cause problems, madness, and other things I wish not to speak of that may anger you so we suggest to allow them to pass! Thankyou!</string>
</resources>