<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="24dp"
    android:paddingTop="36dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.3dp"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        android:text="@string/setup"
        android:textColor="#FFFFFFFF"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        android:text="@string/longpress"
        android:textColor="#FFFFFFFF"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        android:text="@string/ehs"
        android:textColor="#FFFFFFFF"
        android:textSize="16sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        android:text="@string/express"
        android:textColor="#FFFFFFFF"
        android:textSize="16sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        android:text="@string/oem"
        android:textColor="#FFFFFFFF"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/cling_dismiss_longpress_info"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="27dp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:gravity="end"
            android:text="@string/cont"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>