<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/welcome_logo_height"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="@dimen/welcome_logo_top_spacing"
        android:adjustViewBounds="true"
        android:src="@mipmap/ic_launcher_two" />

    <ScrollView
        android:id="@+id/welcome_scrolling_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/welcome_content_padding_top"
        android:paddingBottom="16dp"
        android:layout_marginBottom="?actionBarSize"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay">

        <android.support.v7.widget.CardView
            android:id="@+id/welcome_content"
            android:layout_width="@dimen/welcome_content_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/welcome_content_padding"
                android:background="@color/white">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what_is_sapphire"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="@color/blue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autoLink="web"
                    android:text="@string/what_body_text"
                    style="@style/Base.TextAppearance.AppCompat.Body1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autoLink="web"
                    android:text="@string/what_two_body_text"
                    style="@style/Base.TextAppearance.AppCompat.Body1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autoLink="web"
                    android:text="@string/what_three_body_text"
                    style="@style/Base.TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/titletwo"
                    android:paddingTop="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="@color/blue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autoLink="web"
                    android:text="@string/what_permissions"
                    style="@style/Base.TextAppearance.AppCompat.Body1" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>
</FrameLayout>