<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="start|center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:id="@+id/imageView"
            android:src="@mipmap/ic_launcher_two"
            android:padding="3dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/launcher_name"
            android:id="@+id/textView10"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="6dp"
            android:textColor="@color/blue"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/launcher_copyright"
            android:id="@+id/textView13"
            android:paddingLeft="6dp"
            android:textSize="10sp"
            android:textColor="@color/blue"
            android:layout_below="@+id/textView10"
            android:layout_alignEnd="@+id/textView10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/launcher_version"
            android:paddingLeft="6dp"
            android:textSize="10sp"
            android:textColor="@color/blue"
            android:layout_below="@+id/textView13"
            android:layout_alignEnd="@+id/textView13" />
    </RelativeLayout>

</LinearLayout>